--- a/src/main/res/layout/activity_welcome.xml
+++ b/src/main/res/layout/activity_welcome.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     tools:context="com.example.newpc.qrcode.WelcomeActivity">
 
     <ImageView
-        android:id="@+id/imageView"
         android:layout_width="250dp"
         android:layout_height="300dp"
         android:layout_marginBottom="8dp"
@@ -20,6 +18,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/logo" />
+        app:srcCompat="@mipmap/logo"
+        android:contentDescription="@string/logo_description"/>
 
 </android.support.constraint.ConstraintLayout>
