--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#1e223d</color>
+    <color name="colorPrimaryDark">#06080f</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
